--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,43 @@
+deps/Garbo
+
+# VIM files
+.*.swp
+
+# Julia files
 *.jl.cov
 *.jl.*.cov
 *.jl.mem
-deps/Garbo
+
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+
